[gd_scene load_steps=2 format=3 uid="uid://bxvw8y7qkqxl"]

[ext_resource type="Script" uid="uid://dkd56aq2gub8v" path="res://ui/SettingsMenu.gd" id="1_0k8vw"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0k8vw")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "AUDIO SETTINGS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="MasterVolume" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume:"

[node name="Slider" type="HSlider" parent="Panel/VBox/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="ValueLabel" type="Label" parent="Panel/VBox/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 0
text = "100%"

[node name="MusicVolume" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume:"

[node name="Slider" type="HSlider" parent="Panel/VBox/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.7

[node name="ValueLabel" type="Label" parent="Panel/VBox/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 0
text = "70%"

[node name="SFXVolume" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "SFX Volume:"

[node name="Slider" type="HSlider" parent="Panel/VBox/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="ValueLabel" type="Label" parent="Panel/VBox/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 0
text = "100%"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="TestSFX" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Test SFX"

[node name="HSeparator3" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="BackButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Back"
